# FaceAttendanceManagementSystem

./: .gitignore  package-lock.json
api-service/: .env.example  pyproject.toml  requirements.txt  run.py
api-service/alembic/: env.py
api-service/alembic/versions/: 6fc0cfd1ec5a_initial_schema.py
api-service/src/: main.py
api-service/src/api/v1/features/attendance/: models.py  schemas.py
api-service/src/api/v1/features/audit/: models.py  schemas.py
api-service/src/api/v1/features/corrections/: models.py  schemas.py
api-service/src/api/v1/features/face_profiles/: models.py  schemas.py
api-service/src/api/v1/features/leaves/: models.py  schemas.py
api-service/src/api/v1/features/notifications/: models.py  schemas.py
api-service/src/api/v1/features/shifts/: models.py  schemas.py
api-service/src/api/v1/features/staff/: models.py  schemas.py
api-service/src/api/v1/features/system/: models.py  schemas.py
api-service/src/api/v1/features/users/: models.py  schemas.py
api-service/src/api/v1/shared/: enums.py
api-service/src/core/cache/: redis_client.py
api-service/src/core/configs/: config.py  settings.py
api-service/src/core/db/: base.py  database.py
api-service/src/core/dependencies/: auth.py
api-service/src/core/middleware/: auth_middleware.py  logging_middleware.py  timing_middleware.py
api-service/src/core/security/: authentication.py
api-service/src/utils/: exeptions.py  setup_logger.py
mobile_app/: package-lock.json  package.json
tool/: fake_camera_server.py
web-dashboard/: package-lock.json  package.json
(+29 files in other folders)
